Fix MONGODB_URI formatting in .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI= mongodb+srv://ripalpatel189_db_user:XGUy4rz9zepnOi3r@http5222-assignment1.wd6hxsh.mongodb.net/HTTP5222-Assignment1?retryWrites=true&w=majority
+mongodb+srv://ripalpatel189_db_user:XGUy4rz9zepnOi3r@http5222-assignment1.wd6hxsh.mongodb.net/HTTP5222-Assignment1?retryWrites=true&w=majority
 PORT=3000
