--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-mongodb+srv://ripalpatel189_db_user:XGUy4rz9zepnOi3r@http5222-assignment1.wd6hxsh.mongodb.net/HTTP5222-Assignment1?retryWrites=true&w=majority
+mongodb+srv:
 PORT=3000
